# vkr

./: .gitignore  README.md  main.py  pyproject.toml
src/gait_capture_app/: analysis.py  config.py  controller.py  demo.py  models.py  offline.py  pose.py  realsense.py  storage.py  ui.py
src/gait_capture_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: update_docx_application_section.py
